# rust-axomatic-vn

./: .env  Cargo.toml  Dockerfile  docker-compose.yml  install.sh
migrations/: 1_user.sql  2_author.sql  3_publisher.sql  4_comic.sql
src/: database.rs  lib.rs  main.rs  routers.rs  tools.rs
src/Views/: mod.rs  user_views.rs
src/views/: mod.rs  user_views.rs
