[package]
name = "inthebox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
sqlx = { version = "0.8.0", features = ["runtime-tokio-rustls", "postgres", "time", "uuid"] }
tokio = { version = "1.39.1", features = ["rt", "rt-multi-thread", "macros"] }
time = "0.3.31"
dotenv = "0.15.0"
serde = "1.0.204"
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
arc = "0.0.1"
tower-http = { version = "0.5.2", features = ["cors"] }
log = "0.4.22"
